--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: storage_wrapper
 description: A wrapper for shared_preferences and flutter_secure_storage that provides an unified api and a convenient mocking interface.
-version: 1.3.0
+version: 1.3.1
 homepage: https://github.com/magicleon94/local_storage
 
 environment:
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^3.3.4
-  shared_preferences: ^0.5.12
+  flutter_secure_storage: ^3.3.5
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
