--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: storage_wrapper
 description: A wrapper for shared_preferences and flutter_secure_storage that provides an unified api and a convenient mocking interface.
-version: 1.3.1+1
+version: 2.0.0
 homepage: https://github.com/magicleon94/local_storage
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^3.3.5
-  shared_preferences: ^0.5.12+4
+  flutter_secure_storage: ^4.0.0
+  shared_preferences: ^2.0.3
 
 dev_dependencies:
   flutter_test:
